# drivelist-rs

./: .gitmodules  Cargo.toml  build.rs
device-descriptor/: Cargo.toml
device-descriptor/src/: lib.rs
lib/: drivelist.hpp
lib/drivelist-windows/: .clang-format  dllmain.cpp  list.cc  list.hpp  main.cpp  windows.sln  windows.vcxproj
lib/windows/: list.cc  list.hpp  main.cpp  pch.h  windows.sln  windows.vcxproj  windows.vcxproj.filters
list-darwin/: Cargo.toml
list-darwin/src/: lib.rs
list-linux/: Cargo.toml
list-linux/src/: lib.rs
list-windows/: Cargo.toml  wrapper.h
list-windows/src/: constants.rs  lib.rs
src/: bindings.rs  device_descriptor.rs  lib.rs  main.rs
src-drivelist/: drivelist.hpp
src-drivelist/windows/: list.cpp
