[package]
name = "drivelist-rs"
version = "0.1.0"
authors = ["reido"]
edition = "2018"

[dependencies]

[target.x86_64-pc-windows-msvc.dependencies]
list-windows = { path = "./list-windows" }

[target.x86_64-unknown-linux-gnu.dependencies]
list-linux = { path = "./list-linux" }

[target.x86_64-apple-darwin.dependencies]
list-darwin = { path = "./list-darwin" }

[workspace]
members = [
    "list-windows",
    "list-linux",
    "list-darwin",
]
