[package]
name = "list-windows"
version = "0.1.0"
authors = ["Reidond <reidond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.4.0"
winapi = { version = "0.3.8", features = ["knownfolders", "setupapi", "winnt", "shlobj", "winerror", "winbase", "errhandlingapi"] }
device_descriptor = { path = "../device-descriptor" }
